Updating for Assignment4

--- a/index.Rmd
+++ b/index.Rmd
@@ -20,7 +20,8 @@ During my time here I worked on two projects with the goal of developing a vacci
 
 # Current Research Interest:
 #### University of Georgia - [Dr. Travis Glenn's Lab](https://baddna.uga.edu/)
-My current research focuses on understanding the driving factors of the Lyme Disease Gradient. In this research I am doing a combination of behavior biology, population genetics, and Mendelian genetics. My species of interest is *Ixodes scapularis*.
+My current research focuses on understanding the driving factors of the Lyme Disease Gradient. In this research I am doing a combination of behavior biology, population genetics, and Mendelian genetics. We are currently figuring out our future plan to cross breed ticks from different locations to study their genetics! My species of interest is *Ixodes scapularis*.  
+![I. scapularis](C:\Users\julia\OneDrive\Documents\2019Fall\BIOS8060E\juliaFrederick-introduction\Iscap.jpg)
 
 # Training
 ##### Previous training courses I have taken:
